-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.361 2008-12-09 00:28:26 guru Exp $
-----------------------------------------------------------------------------------------
2008-12-08	pwessel
	* gmt_plot.c:		Bug in GMT_fill_polygon that affected polygon outline
				3D text box was computed incorrectly.
	* gmt_map.c:		Added improved clipping for geographic polygons using
				the Sutherland/Hodgman algorithm when there are no map
				jumps in longitude.  Fixes problem with tiny strips of
				"land" along map perimeter for some projections.
	* gmt_math.h:		Check for macro definitions for system math functions.
	* gmt_vector.c:		GMT_resample_path would add 360 to points along meridians.
	
2008-12-05	pwessel
	* greenspline.c:	New interpolation/gridding program for 1-3 dimensions using
				Green's functions for various splines.  Added new example 29.

2008-12-03	remko
	* PSL_prologue.ps:	Redefined code for circle. Needed a stroke (S) first, otherwise
				a line would be drawn from the previous symbol.
	* pslib.c:		Updated PSL_prologue.ps version.

2008-11-29	pwessel
	* minmax.c:		Optional /<col> may be added to -T<dz> to select a column.
	
2008-11-28	pwessel
	* gmt_init.c:		Now, -R may take the name of an existing grid file. Then,
				the grid domain is used to set -R as well as the grid
				increment for those program that has such an option.

2008-11-21	pwessel
	* spotter/backtracker.c:	The -W option always assumed the reverse rotation,
				i.e. from hotspot to seamount.  Now obeys the -D option.

2008-11-17	pwessel
	* psscale.c:		When -I and -Li was used we did not draw box outlines.
	* ps2raster.c:		New format -Tb for MicroSoft BMP output.  Also, formats
				b, g, j, and t accept modifier '-' to produce grayscale
				images.  Finally, added -Cgs-command to add one or more
				custom switches to ghostscript, and -Q[g|t]<bits> to
				set the level of anti-aliasing for graphics and text.

2008-11-14	pwessel